# plugin-cargo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  os-checker.json  push.sh  repos.json
.github/workflows/: run.yml
src/: crates_io.rs  database.rs  lib.rs  main.rs  repo.rs
src/cache/: db.rs  gh.rs  mod.rs  types.rs
src/crates_io/: mod.rs  release_count.rs  release_tarball.rs
src/nextest/: mod.rs
src/repo/: git_info.rs  miri.rs  mod.rs  os_checker.rs  output.rs  testcases.rs
tests/: nextest.stderr  nextest.stdout  t1.rs
