[package]
name = "os-checker-plugin-cargo"
version = "0.1.4"
edition = "2021"
license = "MIT"
exclude = ["*.json", "*.sh", ".github", "tests"]
description = """
A plugin to os-checker to collect basic information from cargo and git.
"""
repository = "https://github.com/os-checker/plugin-cargo"

[dependencies]
plugin = { version = "0.1.2", package = "os-checker-plugin" }
os-checker-types = "0.4.1"
strip-ansi-escapes = "0.2"
serde = "1"

child_wait_timeout = "0.1"

walkdir = "2"
nextest-metadata = "0.12"

# error handling
eyre = "0.6"

# logger
tracing = "0.1"

redb = "2.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
