[package]
name = "os-checker-plugin-cargo"
version = "0.1.7"
edition = "2021"
# dual licensing: "GPL-3.0 OR MulanPubL"
# MulanPubL is not listed by SPDX, failing to be published to crates.io.
# Thus use a license and another license-file as a workaround,
license = "GPL-3.0"
license-file = "./LICENSE.MulanPubL"
exclude = ["*.json", "*.sh", ".github", "tests"]
description = """
A plugin to os-checker to collect basic information from cargo and git.
"""
repository = "https://github.com/os-checker/plugin-cargo"

[dependencies]
plugin = { version = "0.1.2", package = "os-checker-plugin" }
os-checker-types = "0.6"
strip-ansi-escapes = "0.2"
serde = "1"

child_wait_timeout = "0.1"

walkdir = "2"
nextest-metadata = "0.12"

# error handling
eyre = "0.6"

# logger
tracing = "0.1"

redb = "2.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
